415 improvements to needviewer and usersearch (#437)
* fixed user searching bar and edit course details

* needviewer filters working

* Needviewer shows correct instructor assigned courses

* added tests, restored deleted sectionservicetest

* added tests for getinstructorcourses

* merged develop fixed tests